--- a/Style.css
+++ b/Style.css
@@ -199,3 +199,37 @@ span{
     color: #007185;
     font-size: 0.85rem;
 }
+
+/*****************************************Footer Section****************************/
+footer{
+    margin-top: 15px;
+}
+
+.footer-pannel1{
+    background-color: #37475a;
+    color: white;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.85rem;
+}
+
+.footer-pannel2{
+    background-color: #222f3d;
+    color: white;
+    height: 300px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+ul a{
+    display: block;
+    font-size: 0.85rem;
+    margin-top: 10px;
+    color: #dddddd;
+}
+
+ul p{
+    margin-top: 60px;
+}
