--- a/Style.css
+++ b/Style.css
@@ -233,3 +233,28 @@ ul a{
 ul p{
     margin-top: 60px;
 }
+
+.footer-pannel3{
+    background-color: #222f3d;
+    border-top:0.5px solid white;
+    height: 68px;
+    display: flex;
+    justify-content: center;
+}
+
+.logo{
+    background-image: url(photos/amazon_logo.png);
+    background-size: cover;
+    height:50px;
+    width: 100px;
+
+}
+
+.footer-pannel4{
+    background-color: #131A22;
+    color: #dddddd;
+    height: 67px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
